// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Infobar/> onSearchResultClick() should register search rank scenario event when user clicks the result 1`] = `
[
  [
    {
      "query": "query",
      "requestTime": 1487076708000,
    },
  ],
]
`;

exports[`<Infobar/> onSearchResultClick() should register search rank scenario event when user clicks the result 2`] = `
[
  [
    {
      "numberOfResults": 20,
      "responseTime": 1487076708011,
      "searchEngine": "ES",
    },
  ],
]
`;

exports[`<Infobar/> onSearchResultClick() should register search rank scenario event when user clicks the result 3`] = `
[
  [
    {
      "id": 7,
      "index": 0,
    },
  ],
]
`;

exports[`<Infobar/> onSearchResultClick() should reset spinner and keep customer empty on fetch customer failure 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="m-3"
      >
        <button
          aria-disabled="false"
          class="wrapper fill secondary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              arrow_back
            </i>
            Back
          </span>
        </button>
      </div>
      <div
        data-testid="InfobarSearchResultsList"
      >
        <div>
          errorMessage: 
        </div>
        <div>
          defaultCustomerId: 
          2
        </div>
        <div>
          searchResults: 
          [{"id":7}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render current customer with suggested customer 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
      <div
        class="d-none d-md-block"
      >
        <div
          class="infobarSectionSeparator"
        />
        <div
          class="suggestedCustomer"
        >
          <h4>
            Merge customer profiles?
          </h4>
          <p>
            Another customer profile looks similar to this one. Merging customer profiles gives you a unified customer view.
          </p>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                call_merge
              </i>
              Merge
            </span>
          </button>
        </div>
      </div>
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":10}
        </div>
      </div>
      <div>
        MergeCustomersContainer
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render customer context 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render loading state because the customer is being fetched 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="container"
      >
        <div
          class="inner"
          style="min-height: 500px;"
        >
          <i
            class="icon-custom icon-circle-o-notch md-spin"
            style="font-size: 40px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render loading state because the search is in progress 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="container"
      >
        <div
          class="inner"
          style="min-height: 500px;"
        >
          <i
            class="icon-custom icon-circle-o-notch md-spin"
            style="font-size: 40px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render search results 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="m-3"
      >
        <button
          aria-disabled="false"
          class="wrapper fill secondary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              arrow_back
            </i>
            Back
          </span>
        </button>
      </div>
      <div
        data-testid="InfobarSearchResultsList"
      >
        <div>
          errorMessage: 
        </div>
        <div>
          defaultCustomerId: 
          2
        </div>
        <div>
          searchResults: 
          [{"id":8},{"id":9}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render selected customer 1`] = `
<div>
  <div
    data-testid="InfobarLayout"
  >
    <div
      class="infobarContent"
    >
      <div
        class="infobarSearchWrapper d-flex align-items-center justify-content-between"
      >
        <input
          data-testid="Search"
          placeholder="Search for customers by email, order number, etc."
          style="max-width: none;"
          tabindex="10"
        />
        <button
          aria-disabled="true"
          class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium isDisabled"
          id="toggle-widgets-edition-button"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            settings
          </i>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="m-3"
        >
          <button
            aria-disabled="false"
            class="wrapper selectionBackButton fill secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                arrow_back
              </i>
              Back
            </span>
          </button>
          <div
            class="float-right d-none d-md-block"
          >
            <button
              aria-disabled="false"
              class="wrapper fill secondary medium"
              type="button"
            >
              Merge
            </button>
          </div>
        </div>
        <div
          data-testid="InfobarCustomerInfo"
        >
          InfobarCustomerInfo
          <div>
            customer: 
            {"id":7}
          </div>
        </div>
        <div>
          MergeCustomersContainer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render the error when loading error 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="m-3"
      >
        <button
          aria-disabled="false"
          class="wrapper fill secondary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              arrow_back
            </i>
            Back
          </span>
        </button>
      </div>
      <div
        data-testid="InfobarSearchResultsList"
      >
        <div>
          errorMessage: 
          Failed to do the search. Please try again.
        </div>
        <div>
          defaultCustomerId: 
          2
        </div>
        <div>
          searchResults: 
          []
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render ticket context 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="false"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render widgets edition mode 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        style="max-width: none;"
        tabindex="10"
      />
      <button
        aria-disabled="true"
        class="wrapper d-none d-md-inline-block ml-2 btn-transparent wrapper fill secondary medium isDisabled"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        aria-disabled="true"
        class="wrapper mr-2 fill primary medium isDisabled"
        type="button"
      >
        Save changes
      </button>
      <button
        aria-disabled="true"
        class="wrapper fill secondary medium isDisabled"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
